fix: update horizontal scrollbar height

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -20,6 +20,7 @@ html.transitioning-color-scheme * {
 @media (orientation: landscape) {
   ::-webkit-scrollbar {
     width: 12px;
+    height: 12px;
     background-color: theme('colors.gray.200');
   }
   ::-webkit-scrollbar-track {
